--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GetInTouch</string>
+    <string name="my_map_api_key">AIzaSyC78dYm9R9Tk3feNVwgyY1D_Xs6iWOKo74</string>
 </resources>
